--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html,body {
-    background-image: url("http://modeon.co/wp-content/uploads/2018/04/light-wallpaper-background-cream-hd-wallpapers.jpg");
+    background-image: url("http://shopforclipart.com/images/star-background-cliparts/29.jpg");
 }
 .App {
   text-align: center;
@@ -51,5 +51,23 @@ h1 {
   text-align: center;
   height: 50px;
   font-size: 50px;
+}
+
+.cart {
+  margin-left: 1000px;
+  width:210px;
+  height:60px;
+  background-color: rgb(248, 14, 14);
+  border: 5px solid black;
+  border-radius: 10px;
+}
+
+h2 {
+  background-color: red;
+  width: 350px;
+  height: 70px;
+  margin-left: 530px;
+  font-size: 40px;
+  color: rgb(39, 186, 206);
 }
 
